[gd_scene load_steps=2 format=3 uid="uid://0xwvup7qe5f"]

[ext_resource type="Script" path="res://scripts/ui/action_cost_node.gd" id="1_8a8sg"]

[node name="ActionCost" type="Control"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_8a8sg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_right = 0.6
anchor_bottom = 1.0

[node name="NoCosts" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "(There are no costs.)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PopulationContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="Label" parent="VBoxContainer/PopulationContainer"]
layout_mode = 2
text = "Population cost:"
vertical_alignment = 1

[node name="PopulationCostLabel" type="Label" parent="VBoxContainer/PopulationContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "99999"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MoneyContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="Label" parent="VBoxContainer/MoneyContainer"]
layout_mode = 2
text = "Money cost:"
vertical_alignment = 1

[node name="MoneyCostLabel" type="Label" parent="VBoxContainer/MoneyContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "9999999"
horizontal_alignment = 2
vertical_alignment = 1
